--- a/test/screenshot/spec/mdc-menu/classes/bottom-anchored.html
+++ b/test/screenshot/spec/mdc-menu/classes/bottom-anchored.html
@@ -23,7 +23,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Baseline Menu - MDC Web Screenshot Test</title>
+    <title>Bottom-Anchored Menu - MDC Web Screenshot Test</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../../../out/mdc.menu.css">
     <link rel="stylesheet" href="../../../out/mdc.menu-surface.css">
@@ -43,38 +43,33 @@
   </head>
 
   <body class="test-container">
-    <main class="test-viewport test-viewport--mobile">
-      <div class="test-layout">
-        <div class="test-cell test-cell--menu">
-          <div class="test-menu-button-container">
-            <button class="mdc-button test-menu-button">Open menu</button>
-            <div class="mdc-menu mdc-menu-surface mdc-menu-surface--open test-menu--baseline" tabindex="-1" id="demo-menu">
-              <ul class="mdc-list" role="menu" aria-hidden="true" aria-orientation="vertical">
-                <li>
-                  <ul class="mdc-menu__selection-group">
-                    <li class="mdc-list-item" role="menuitem">
-                      <span class="mdc-menu__selection-group-icon">
-                        <i class="material-icons">check</i>
-                      </span>
-                      <span class="mdc-list-item__text">Single</span>
-                    </li>
-                    <li class="mdc-list-item" role="menuitem">
-                      <span class="mdc-menu__selection-group-icon">
-                        <i class="material-icons">check</i>
-                      </span>
-                      <span class="mdc-list-item__text">1.15</span>
-                    </li>
-                  </ul>
-                </li>
-                <li class="mdc-list-divider" role="separator"></li>
-                <li class="mdc-list-item" role="menuitem">
-                  <span class="mdc-list-item__text">Add space before paragraph</span>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
+    <div class="test-menu-button-container test-menu-button-container--bottom-right">
+      <button class="mdc-button test-menu-button">Open menu</button>
+      <div class="mdc-menu mdc-menu-surface mdc-menu-surface--open test-menu--bottom-right" tabindex="-1" id="demo-menu">
+        <ul class="mdc-list" role="menu" aria-hidden="true" aria-orientation="vertical">
+          <li>
+            <ul class="mdc-menu__selection-group">
+              <li class="mdc-list-item" role="menuitem">
+                <span class="mdc-menu__selection-group-icon">
+                  <i class="material-icons">check</i>
+                </span>
+                <span class="mdc-list-item__text">Single</span>
+              </li>
+              <li class="mdc-list-item" role="menuitem">
+                <span class="mdc-menu__selection-group-icon">
+                  <i class="material-icons">check</i>
+                </span>
+                <span class="mdc-list-item__text">1.15</span>
+              </li>
+            </ul>
+          </li>
+          <li class="mdc-list-divider" role="separator"></li>
+          <li class="mdc-list-item" role="menuitem">
+            <span class="mdc-list-item__text">Add space before paragraph</span>
+          </li>
+        </ul>
       </div>
+    </div>
     </main>
 
     <!-- Automatically provides/replaces `Promise` if missing or broken. -->
